2010-10-25 Guido Scholz <guido.scholz@bayernline.de>
	* src/function.*, src/canvasfunction.*: Replace std::min/max by
	generic Qt functions qMin/qMax; this should fix armel compile
	error (reported for debian #570848).

2010-10-24 Guido Scholz <guido.scholz@bayernline.de>
	* configure.ac, src/synthdata.cpp: Basic support for libclalsadrv
	API version 2.0.0.

2010-01-03 Karsten Wiese <fzuuzf@googlemail.com>
	* src/m_dynamicwaves.*, src/m_vcf.*:
	Replace 2D [MAXPOLY] arrays by PolyArr<> to ensure initialization.
	* src/m_vcf.cpp: Initialize vcfType to let the vcf start with a defined
	filtertype.
	Ensure initBuf() is called before running different filtertype.
	Prevents click on filtertype switching.
	
2010-01-02 Karsten Wiese <fzuuzf@googlemail.com>
	* template <typename tn> class PolyArr;
	Replace simple [MAXPOLY] arrays by it to ensure initialization.

2010-01-01 Karsten Wiese <fzuuzf@googlemail.com>
	* src/synthdata.cpp: Add SND_SEQ_EVENT_SENSING (42) to the list
	of ignored MIDI event types.
	* src/modularsynth.cpp: Add test code for ALSA MIDI event type
	filtering. Didn't work, commented it out. Committed it nonetheless
	so I don't try this again without knowing what I already tried.

2009-12-29 Guido Scholz <guido.scholz@bayernline.de>
	* src/mainwindow.cpp: Handler for SIGUSR1 added to save
	currently opened patch file. This enables LADI session handling
	on application level 1.

2009-12-28 Guido Scholz <guido.scholz@bayernline.de>
	* src/main.cpp, src/mainwindow.cpp, src/synthdata.cpp: Fixed
	compiler warnings caused by usage of string literals without
	format parameters in qWarning(), appears with Qt 4.5.
	* src/mainwindow.cpp: Compiler warning about ignored write()
	result fixed.
	* src/m_wavout.cpp: Compiler warning about ignored getcwd()
	result fixed.


+++ Release 2.0.1 (2009-12-26) +++

2009-12-25 Karsten Wiese <fzuuzf@googlemail.com>
	* src/m_env.cpp: Initialize M_env::e_noteOff[].

2009-10-07 Guido Scholz <guido.scholz@bayernline.de>